# mujoco-playground

./: .gitignore  CMakeLists.txt  README.md  resources  setup.py
cmake/: FindADOLC.cmake  FindIPOPT.cmake  canonicalize_paths.cmake
demo/: CMakeLists.txt  basic.cpp  demo.cpp  demo_render.cpp  demo_ur5e.cpp  derivative.cpp  psopt_demo.cpp
interfaces/physics_interface/: joint_controller.h  joint_group.h
mujoco_render/: CMakeLists.txt  README.md
mujoco_render/include/mujoco_render/: mujoco_render.h  render_thread.h  simulate_thread.h
mujoco_render/src/: glfw_thread.cpp  glfw_thread.h  mujoco_render.cpp  render_thread.cpp  render_thread.h  simulate_thread.cpp
notebooks/: MUJOCO_LOG.TXT  experiment.ipynb  experiment.py
physics_interface/include/: physics_interface.h
physics_interface/src/: physics_interface.cpp
physics_mujoco/: CMakeLists.txt
physics_mujoco/include/physics_mujoco/: body_tree.h  exceptions.h  mujoco_joint_controller.h  mujoco_joint_group.h  mujoco_kinematic_tree.h  mujoco_state_validity_checker.h  utils.h
physics_mujoco/src/: body_tree.cpp  mujoco_joint_controller.cpp  mujoco_joint_group.cpp  mujoco_joint_group_qpfetcher.cpp  mujoco_kinematic_tree.cpp  mujoco_state_validity_checker.cpp  utils.cpp
physics_ompl/: CMakeLists.txt
physics_ompl/include/physics_ompl/: state_validity_checker.h
physics_ompl/src/: state_validity_checker.cpp
python/: CMakeLists.txt  README.md
python/physics_mujoco/: __init__.py
python/src/: kdl_core_py.h  mujoco_core_py.h  mujoco_joint_group_py.cpp  mujoco_joint_group_py.h  mujoco_kinematic_tree_py.h  mujoco_render_py.h
